--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=Rest_Service
 
+#This is the server config
 server.port=8080
 
+#This is the Postgres config
 spring.datasource.url=${ACP_POSTGRES\:jdbc:postgresql://localhost:5432/acp}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+#These are the custom properties for our AWS services
 aws.s3.endpoint=${ACP_S3:https://localhost:4566}
 aws.dynamodb.endpoint=${ACP_DYNAMODB:https://localhost:4566}
 
+# These are the AWS credentials
 aws.accessKey=test
 aws.secretKey=test
 aws.region=us-east-1
