Dynamo changes and S3 done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 #These are the custom properties for our AWS services
-aws.s3.endpoint=${ACP_S3:https://localhost:4566}
-aws.dynamodb.endpoint=${ACP_DYNAMODB:https://localhost:4566}
+aws.s3.endpoint=${ACP_S3:http://localhost:4566}
+aws.dynamodb.endpoint=${ACP_DYNAMODB:http://localhost:4566}
 
 # These are the AWS credentials
 aws.accessKey=test
 aws.secretKey=test
-aws.region=us-east-1
+aws.region=Region.US_EAST_1
 
