--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Rest_Service
 server.port=8080
 
 #This is the Postgres config
-spring.datasource.url=${ACP_POSTGRES\:jdbc:postgresql://localhost:5432/acp}
+spring.datasource.url=${ACP_POSTGRES:jdbc:postgresql://localhost:5432/acp}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
